Ajout du formulaire, des méta data pour le SEO et du favicon

--- a/galerie.html
+++ b/galerie.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galerie</title>
+    <meta
+      name="description"
+      content="Galerie d'images des paysages de Nouvelle-Calédonie"
+    />
+    <meta
+      name="keywords"
+      content="Nouvelle-Calédonie, voyage, plage, découvrir, photo, galerie"
+    />
+    <meta name="robots" content="follow, index" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header>
       <nav>
         <ul class="main-layout">
           <li><a href="./index.html">Acceuil</a></li>
-          <li><a href="./formulaire.html">Calédo-quizz</a></li>
+          <li><a href="./quizz.html">Calédo-quizz</a></li>
           <li><a href="./galerie.html">Galerie</a></li>
         </ul>
       </nav>
@@ -21,7 +31,7 @@
         <h1>Galerie</h1>
         <hr />
         <div>
-          <div>
+          <div class="img-container">
             <img
               src="./images/nc_galerie1.jpg"
               width="200"
@@ -29,7 +39,7 @@
               alt="Nouvelle-Calédonie"
             />
           </div>
-          <div>
+          <div class="img-container">
             <img
               src="./images/nc_galerie2.jpg"
               width="200"
@@ -37,7 +47,7 @@
               alt="Nouvelle-Calédonie"
             />
           </div>
-          <div>
+          <div class="img-container">
             <img
               src="./images/nc_galerie3.jpg"
               width="200"
@@ -45,7 +55,7 @@
               alt="Nouvelle-Calédonie"
             />
           </div>
-          <div>
+          <div class="img-container">
             <img
               src="./images/nc_galerie4.jpg"
               width="200"
@@ -53,7 +63,7 @@
               alt="Nouvelle-Calédonie"
             />
           </div>
-          <div>
+          <div class="img-container">
             <img
               src="./images/nc_galerie5.jpg"
               width="200"
@@ -61,7 +71,7 @@
               alt="Nouvelle-Calédonie"
             />
           </div>
-          <div>
+          <div class="img-container">
             <img
               src="./images/nc_galerie6.jpg"
               width="200"
@@ -69,7 +79,7 @@
               alt="Nouvelle-Calédonie"
             />
           </div>
-          <div>
+          <div class="img-container">
             <img
               src="./images/nc_galerie7.jpg"
               width="200"
@@ -77,7 +87,7 @@
               alt="Nouvelle-Calédonie"
             />
           </div>
-          <div>
+          <div class="img-container">
             <img
               src="./images/nc_galerie8.jpg"
               width="200"
@@ -85,7 +95,7 @@
               alt="Nouvelle-Calédonie"
             />
           </div>
-          <div>
+          <div class="img-container">
             <img
               src="./images/nc_galerie9.jpg"
               width="200"
@@ -97,7 +107,7 @@
       </div>
     </section>
     <footer>
-      <div>Site creer par <i>JEAN Maxime</i></div>
+      <div>Site creer par &copy; <i>JEAN Maxime</i></div>
     </footer>
   </body>
 </html>
