--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Decouvrez la Nouvelle-Calédonie</title>
+    <meta
+      name="description"
+      content="Venez découvrir la Nouvelle-Calédonie et ses paysages magnifiques"
+    />
+    <meta name="keywords" content="Nouvelle-Calédonie, voyage, plage, découvrir" />
+    <meta name="robots" content="follow, index" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header>
       <nav>
         <ul class="main-layout">
           <li><a href="index.html">Acceuil</a></li>
-          <li><a href="formulaire.html">Calédo-quizz</a></li>
+          <li><a href="quizz.html">Calédo-quizz</a></li>
           <li><a href="galerie.html">Galerie</a></li>
         </ul>
       </nav>
@@ -24,45 +31,53 @@
     </header>
     <section id="description">
       <div class="main-layout">
-        <img
-          src="./images/nc_home_article.jpg"
-          width="400"
-          height="250"
-          alt="Nouvelle-Calédonie"
-        />
+        <div>
+          <img
+            src="./images/nc_home_article.jpg"
+            width="400"
+            height="250"
+            alt="Nouvelle-Calédonie"
+          />
+        </div>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quod ipsa sint
-          quidem nostrum, laudantium amet eius modi suscipit ipsam, consectetur nulla?
-          Possimus voluptas distinctio molestias reiciendis facere cum fugiat quidem omnis
-          dolor aut! Amet, perferendis totam? Ducimus, repellat molestiae nemo maiores
-          animi autem reprehenderit. Dolorum ad, voluptas temporibus laborum sint animi.
-          Laboriosam, quo veritatis.
+          La Nouvelle-Calédonie est une collectivité sui generis française composée d'un
+          ensemble d'îles et d'archipels d'Océanie, situés en mer de Corail et dans
+          l'océan Pacifique sud. L'île principale est la Grande Terre, longue de 400
+          kilomètres et mesurant 64 km dans sa plus grande largeur.
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reprehenderit
-          maxime labore sint assumenda beatae molestias? Odio consequatur, doloremque
-          officia ipsum consequuntur itaque dolore, corporis quibusdam quae officiis
-          possimus eaque quidem autem ex incidunt inventore cumque nulla? Deserunt,
-          voluptatibus, possimus sed accusamus ab dignissimos delectus distinctio dicta in
-          magni numquam necessitatibus adipisci amet vitae aliquam?
+          Son chef-lieu ou capitale, Nouméa, en est aussi la principale commune et la
+          seule grande ville. Elle compte 94 285 habitants au recensement de 20193. Le
+          Grand Nouméa (avec les communes voisines de Païta, Dumbéa et Mont-Dore) compte
+          182 341 habitants, soit les deux tiers des 271 407 personnes peuplant
+          l'archipel.
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reprehenderit
-          maxime labore sint assumenda beatae molestias? Odio consequatur, doloremque
-          officia ipsum consequuntur itaque dolore, corporis quibusdam quae officiis
-          possimus eaque quidem autem ex incidunt inventore cumque nulla? Deserunt,
-          voluptatibus, possimus sed accusamus ab dignissimos delectus distinctio dicta in
-          magni numquam necessitatibus adipisci amet vitae aliquam?
+          La distance avec la France métropolitaine est d'environ 16 740 kilomètres. Cette
+          collectivité (anciennement territoire d'outre-mer, TOM) d'une superficie de 18
+          575,5 kilomètres carrés, située en Mélanésie et en Océanie lointaine, relève de
+          la souveraineté française depuis 1853.
+        </p>
+        <p>
+          Elle dispose de signes identitaires qui lui sont propres, aux côtés des emblèmes
+          nationaux français (un hymne, une devise et une graphie spécifique des billets
+          de banque). La question de son drapeau et de son nom font en revanche débat, les
+          indépendantistes utilisant généralement l'appellation de « Kanaky » (en
+          référence au peuple kanak) et disposant de leur propre drapeau depuis 1984, deux
+          options rejetées généralement par les non-indépendantistes qui peuvent défendre
+          pour leur part des positions assez diverses (statu quo, association des emblèmes
+          indépendantistes à ceux de la France, ou invention de nouveaux symboles communs
+          à l'ensemble des communautés vivant dans l'archipel).
         </p>
       </div>
     </section>
-    <section>
+    <section id="video">
       <div class="main-layout">
         <iframe
           width="560"
           height="315"
           src="https://www.youtube.com/embed/TlEDfkcdan4"
-          title="YouTube video player"
+          title="Vidéo sur la Nouvelle-Calédonie"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
@@ -70,7 +85,7 @@
       </div>
     </section>
     <footer>
-      <div>Site creer par <i>JEAN Maxime</i></div>
+      <div>Site creer par &copy; <i>JEAN Maxime</i></div>
     </footer>
   </body>
 </html>
