--- a/galerie.html
+++ b/galerie.html
@@ -15,99 +15,97 @@
     />
     <meta name="robots" content="follow, index" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul class="main-layout">
-          <li><a href="./index.html">Acceuil</a></li>
-          <li><a href="./quizz.html">Calédo-quizz</a></li>
-          <li><a href="./galerie.html">Galerie</a></li>
+          <li><a class="navlink" href="./index.html">Acceuil</a></li>
+          <li><a class="navlink" href="./quizz.html">Calédo-quizz</a></li>
+          <li><a class="navlink" href="./galerie.html">Galerie</a></li>
         </ul>
       </nav>
     </header>
-    <section id="galerie">
-      <div class="main-layout">
-        <h1>Galerie</h1>
-        <hr />
-        <div>
-          <div class="img-container">
-            <img
-              src="./images/nc_galerie1.jpg"
-              width="200"
-              height="200"
-              alt="Nouvelle-Calédonie"
-            />
-          </div>
-          <div class="img-container">
-            <img
-              src="./images/nc_galerie2.jpg"
-              width="200"
-              height="200"
-              alt="Nouvelle-Calédonie"
-            />
-          </div>
-          <div class="img-container">
-            <img
-              src="./images/nc_galerie3.jpg"
-              width="200"
-              height="200"
-              alt="Nouvelle-Calédonie"
-            />
-          </div>
-          <div class="img-container">
-            <img
-              src="./images/nc_galerie4.jpg"
-              width="200"
-              height="200"
-              alt="Nouvelle-Calédonie"
-            />
-          </div>
-          <div class="img-container">
-            <img
-              src="./images/nc_galerie5.jpg"
-              width="200"
-              height="200"
-              alt="Nouvelle-Calédonie"
-            />
-          </div>
-          <div class="img-container">
-            <img
-              src="./images/nc_galerie6.jpg"
-              width="200"
-              height="200"
-              alt="Nouvelle-Calédonie"
-            />
-          </div>
-          <div class="img-container">
-            <img
-              src="./images/nc_galerie7.jpg"
-              width="200"
-              height="200"
-              alt="Nouvelle-Calédonie"
-            />
-          </div>
-          <div class="img-container">
-            <img
-              src="./images/nc_galerie8.jpg"
-              width="200"
-              height="200"
-              alt="Nouvelle-Calédonie"
-            />
-          </div>
-          <div class="img-container">
-            <img
-              src="./images/nc_galerie9.jpg"
-              width="200"
-              height="200"
-              alt="Nouvelle-Calédonie"
-            />
+    <div class="contents">
+      <section id="galerie">
+        <div class="main-layout">
+          <h1 class="title">Galerie</h1>
+          <hr />
+          <div class="galerie-container">
+            <div class="img-container">
+              <img src="./images/nc_galerie1.jpg" alt="Nouvelle-Calédonie" />
+            </div>
+            <div class="img-container">
+              <img
+                src="./images/nc_galerie2.jpg"
+                width="200"
+                height="200"
+                alt="Nouvelle-Calédonie"
+              />
+            </div>
+            <div class="img-container">
+              <img
+                src="./images/nc_galerie3.jpg"
+                width="200"
+                height="200"
+                alt="Nouvelle-Calédonie"
+              />
+            </div>
+            <div class="img-container">
+              <img
+                src="./images/nc_galerie4.jpg"
+                width="200"
+                height="200"
+                alt="Nouvelle-Calédonie"
+              />
+            </div>
+            <div class="img-container">
+              <img
+                src="./images/nc_galerie5.jpg"
+                width="200"
+                height="200"
+                alt="Nouvelle-Calédonie"
+              />
+            </div>
+            <div class="img-container">
+              <img
+                src="./images/nc_galerie6.jpg"
+                width="200"
+                height="200"
+                alt="Nouvelle-Calédonie"
+              />
+            </div>
+            <div class="img-container">
+              <img
+                src="./images/nc_galerie7.jpg"
+                width="200"
+                height="200"
+                alt="Nouvelle-Calédonie"
+              />
+            </div>
+            <div class="img-container">
+              <img
+                src="./images/nc_galerie8.jpg"
+                width="200"
+                height="200"
+                alt="Nouvelle-Calédonie"
+              />
+            </div>
+            <div class="img-container">
+              <img
+                src="./images/nc_galerie9.jpg"
+                width="200"
+                height="200"
+                alt="Nouvelle-Calédonie"
+              />
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
     <footer>
-      <div>Site creer par &copy; <i>JEAN Maxime</i></div>
+      <p>Site creer par &copy; <i>JEAN Maxime</i></p>
     </footer>
   </body>
 </html>
